--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                 <li class="mb-1">
                     <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
-                        API Design
+                        API design
                     </button>
                     <div class="collapse show" id="home-collapse" style="">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -61,9 +61,9 @@
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                             <li><a href="#integrations" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Integrations</a></li>
                             <li><a href="#origin" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Origin</a></li>
-                            <li><a href="#api_version" class="link-body-emphasis d-inline-flex text-decoration-none rounded">API Version</a></li>
+                            <li><a href="#api_version" class="link-body-emphasis d-inline-flex text-decoration-none rounded">API version</a></li>
                             <li><a href="#api_headers" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Headers</a></li>
-                            <li><a href="#returned_data" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Returned Data</a></li>
+                            <li><a href="#returned_data" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Returned data</a></li>
                             <li><a href="#errors" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Errors</a></li>
                         </ul>
                     </div>
@@ -157,7 +157,8 @@ curl -X GET \
             </section>
             <section class="mt-5" id="integrations">
                 <h3>Context</h3>
-                <p class="lead">Integrations</p>
+                <hr>
+                <p class="lead">Available integrations</p>
                 <table class="table">
                     <thead>
                         <tr>
